--- a/src/styles/mobile/Header.scss
+++ b/src/styles/mobile/Header.scss
@@ -33,14 +33,14 @@
                 background-size: 800px;
                 background-repeat: no-repeat;
                 position: relative;
-                background-image: url("../../assets/Nebil-Sahin-Header-bg3.jpg");
+                background-image: url('../../assets/Nebil-Sahin-Header-bg3.jpg');
                 z-index: -10;
                 transition: all 0.2s ease-out;
             }
         }
 
         .blur {
-            width: 63%;
+            width: 100% !important;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -49,14 +49,15 @@
             position: absolute;
             box-shadow: 0px 60px 50px 10px rgba(black, 0.4);
             backdrop-filter: blur(15px);
+            background-color: rgba(white, 0.5);
 
             span {
                 font-size: $font-size-xxxl;
                 line-height: 1.5rem;
-                
+
                 .header-title {
                     font-weight: $font-weight-extrabold;
-                    font-size: $font-size-xxxl;
+                    font-size: $font-size-xxl;
                     line-height: 1.5rem;
                 }
 
@@ -106,7 +107,9 @@
                     }
                 }
             }
+
         }
+
     }
 
     .art-container {
@@ -115,6 +118,7 @@
         overflow: hidden;
         position: relative;
         backdrop-filter: blur(0px);
+
     }
 
     .img-container {
