--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -46,8 +46,14 @@ body{
 
 //Default Theme
 @media (orientation: landscape) {
+  #root{
+    background-image: url('../assets/side-background.png');
+    background-size: contain;
+  }
+
   .App{
     max-width: $page-width;
+    background-color: white;
     overflow: hidden;
     margin: auto;
     box-shadow: 0px 0px 50px 0px rgba(black, 0.4);
