--- a/src/styles/mobile/Navbar.scss
+++ b/src/styles/mobile/Navbar.scss
@@ -42,9 +42,14 @@
         .nav {
             width: 160px;
             height: 50px;
+            overflow: hidden;
             direction: rtl;
+
+            &:hover{
+                overflow: visible;
+            }
+
             .nav-item{
-                // width: 50%;
                 text-align: right;
             }
         }
