--- a/src/styles/default/MouseBubble.scss
+++ b/src/styles/default/MouseBubble.scss
@@ -14,6 +14,10 @@
     align-items: center;
     
     .mouse-message{
+        width: 0;
+        text-align: center;
+        transition: all 0.4s ease-out;
+        overflow: hidden;
         padding: 0px 20px;
         font-weight: $font-weight-bold;
         color: $gray-500;
