--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,10 +19,10 @@ body {
 
 }
 
-body{
+body {
   overflow: hidden;
 
-  &.done{
+  &.done {
     overflow: auto;
     overflow-x: hidden;
   }
@@ -31,28 +31,44 @@ body{
 ::-webkit-scrollbar {
   width: 10px;
 }
+
 ::-webkit-scrollbar-track {
-  background: transparent; 
-}
- ::-webkit-scrollbar-thumb {
-  background: $primary-color; 
-  border-radius: 2rem
-}
-::-webkit-scrollbar-thumb:hover {
-  background: $gray-800; 
+  background: transparent;
 }
 
+::-webkit-scrollbar-thumb {
+  background: $primary-color;
+  border-radius: 2rem
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $gray-800;
+}
+
+//styles that apply on both mobile and desktop
+.link {
+  &:focus {
+    color: $text-color
+  }
+
+  &:hover {
+    color: $primary-color  !important;
+  }
+}
 
 
 //Default Theme
 @media (orientation: landscape) {
-  .app-container{
+  .app-container {
     background-image: url('../assets/side-background.png');
     background-size: contain;
+    // background-position: 50% 0;    
+    // transition: 0s ease-out;
+    // transition-property: background-position;
     height: 100vh;
   }
 
-  .app{
+  .app {
     max-width: $page-width;
     background-color: white;
     overflow: hidden;
@@ -71,12 +87,13 @@ body{
 
 //Mobile Theme
 @media (orientation: portrait) {
-  .app{
+  .app {
     width: 100%;
     overflow: hidden;
     margin: auto;
     box-shadow: 0px 0px 50px 0px rgba(black, 0.4);
   }
+
   @import './mobile/Navbar.scss';
   @import './mobile/Header.scss';
   @import './mobile/Content.scss';
